# story-scraper

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/storyscraper/: __init__.py  cli.py  cookies.py  fetch.py  http.py  makefile.py  options.py  transform.py  urlclassifier.py
src/storyscraper/fetchers/: __init__.py  ao3_fetcher.py  auto.py  bdsmlibrary_fetcher.py  deviantart_fetcher.py  eroticstories_fetcher.py  fanfiction_fetcher.py  inkitt_fetcher.py  literotica_fetcher.py  mcstories_fetcher.py  patreon_fetcher.py  wattpad_fetcher.py
src/storyscraper/transformers/: __init__.py  ao3_transformer.py  auto.py  bdsmlibrary_transformer.py  deviantart_transformer.py  eroticstories_transformer.py  fanfiction_transformer.py  inkitt_transformer.py  literotica_transformer.py  mcstories_transformer.py  patreon_transformer.py  wattpad_transformer.py
tests/: conftest.py  test_cli.py  test_fetch_ao3.py  test_fetch_auto.py  test_fetch_bdsmlibrary.py  test_fetch_deviantart.py  test_fetch_eroticstories.py  test_fetch_fanfiction.py  test_fetch_inkitt.py  test_fetch_literotica.py  test_fetch_patreon.py  test_fetch_wattpad.py  test_http.py  test_makefile.py  test_options.py  test_transform_ao3.py  test_transform_auto.py  test_transform_bdsmlibrary.py  test_transform_deviantart.py  test_transform_fanfiction.py  test_transform_literotica.py  test_transform_patreon.py  test_transform_wattpad.py  test_urlclassifier.py
