[project]
name = "storyscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdownify>=0.14.1",
    "requests>=2.32.3",
    "pycryptodome>=3.21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "types-requests>=2.32.0.20240906",
]

[project.scripts]
storyscraper = "storyscraper.cli:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
